Cleanup and improvements

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,42 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Exam 1",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/dist/exam1",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}/exam1",
+            "environment": [],
+            "externalConsole": false,
+            "preLaunchTask": "buildExam1",
+        },
+        {
+            "name": "Week 6",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/dist/week6",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}/week6",
+            "environment": [],
+            "externalConsole": false,
+            "preLaunchTask": "buildWeek6",
+        },
+        {
+            "name": "Week 5",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/dist/week5",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}/week5",
+            "environment": [],
+            "externalConsole": false,
+            "preLaunchTask": "buildWeek5",
+        },
+        {
             "name": "Dbg A1",
             "type": "cppdbg",
             "request": "launch",
