--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,30 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Exam 2",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/dist/exam2",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}/exam2",
+            "environment": [],
+            "externalConsole": false,
+            "preLaunchTask": "buildExam2",
+        },
+        {
+            "name": "Week 10",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/dist/week10",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}/week10",
+            "environment": [],
+            "externalConsole": false,
+            "preLaunchTask": "buildWeek10",
+        },
+        {
             "name": "Exam 1",
             "type": "cppdbg",
             "request": "launch",
