--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,6 +15,13 @@
             "environment": [],
             "externalConsole": false,
             "preLaunchTask": "buildExam2",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ]
         },
         {
             "name": "Week 10",
