--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,25 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Exam 3",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/dist/exam3",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}/exam3",
+            "environment": [],
+            "externalConsole": false,
+            "preLaunchTask": "buildExam3",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ]
+        },
+        {
             "name": "Exam 2",
             "type": "cppdbg",
             "request": "launch",
